force-app/main/default/objects/MIY_Workshop__c/MIY_Workshop__c.object-meta.xml
<CustomObject>
    <description>Holds the different workshop for Make it Yours app</description>
    <label>Workshop</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>Workshop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workshops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>