force-app/main/default/objects/MIY_Workshop__c/fields/Creation_Type__c.field-meta.xml
<CustomField>
    <fullName>Creation_Type__c</fullName>
    <description>Indicates whether the product is Harsided or Soft</description>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Creation_Type</valueSetName>
    </valueSet>
</CustomField>