force-app/main/default/objects/MIY_Workshop__c/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JDE</fullName>
            </value>
            <value>
                <fullName>AFS</fullName>
            </value>
            <value>
                <fullName>FMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>