force-app/main/default/objects/MIY_Workshop__c/fields/Exotic__c.field-meta.xml
<CustomField>
    <fullName>Exotic__c</fullName>
    <label>Exotic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>