force-app/main/default/objects/MIY_Workshop__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Holds the type of order (used for special orders mainly)</description>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Type</valueSetName>
    </valueSet>
</CustomField>