force-app/main/default/objects/MIY_Workshop__c/fields/Production_Time_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Production_Time_In_Days__c</fullName>
    <label>Production_Time_In_Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>