force-app/main/default/objects/MIY_Workshop__c/fields/Subcontracting__c.field-meta.xml
<CustomField>
    <fullName>Subcontracting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subcontracting</label>
    <type>Checkbox</type>
</CustomField>