force-app/main/default/objects/MIY_Workshop__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <description>Holds the Workshop Number. Workshop Name is handled in Translation workbench</description>
    <label>Workshop</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workshop</valueSetName>
    </valueSet>
</CustomField>