force-app/main/default/objects/MIY_Workshop__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Workshop__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Exotic__c</columns>
    <columns>Creation_Type__c</columns>
    <columns>Production_Time_In_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>